[package]
name = "woah"
version = "0.2.0"
authors = ["Andrew Lilley Brinker <andrewabrinker@gmail.com>"]
description = """
    A Result type that differentiates between local errors (which can be handled)
    and fatal errors (which cannot)
"""
license = "MIT OR Apache-2.0"
edition = "2018"
categories = ["rust-patterns"]
keywords = ["result", "error-handling"]
repository = "https://github.com/alilleybrinker/woah/"
readme = "README.md"

[dependencies]
either = { version = "1.5", default-features = false, optional = true }
serde = { version = "1.0", optional = true }

[features]
default = ["either_methods", "std"]

# This uses the `either` crate to enable methods which work on
# `Either<LocalErr, FatalErr>`.
either_methods = ["either/use_std"]

# Use types from the standard library.
std = []

# Enable all nightly-only features of the crate.
nightly = []

[package.metadata.docs.rs]
# Turn on all features on docs.rs (documentation explains which are nightly-only)
features = ['default', 'serde', 'nightly']
