[package]
name = "woah"
version = "0.4.3"
description = """
    A Result type that differentiates between local errors (which can be handled)
    and fatal errors (which cannot)
"""
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.61.0"
categories = ["rust-patterns"]
keywords = ["result", "error-handling"]
repository = "https://github.com/alilleybrinker/woah/"
readme = "README.md"

[dependencies]
either = { version = "1.5", default-features = false, optional = true }
serde = { version = "1.0.127", optional = true }

[features]
default = ["either", "std"]

# Use types from the standard library.
#
# If `either` is also enabled, turn on `std` for it too.
std = ["either?/use_std"]

# Enable all nightly-only features of the crate.
nightly = []

[dev-dependencies]
rand = "0.8.5"

[package.metadata.docs.rs]
# Turn on all features on docs.rs (documentation explains which are nightly-only)
features = ['default', 'serde', 'nightly']
